--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,63 +1,41 @@
-/* header img {
-    margin: 2rem;
-}
 
-header .nav {
-    margin: 2rem;
-    justify-content: center;
-} */
 @import "../components/_variables";
 
 header {
 
     background-color: $bg;
-    justify-items: center;
+
+    & img {
+        max-width: 100%;
+    }
 
     & hr {
-        border: 0.5px solid #fff;
+        border: 1px solid $white;
         opacity: 1;    
+    }
+
+    & .list-inline {
+        margin: 0;
     }
 
 }
 // NAV
 
 .nav {
-    text-align: center;
     font-size: 1.7rem;
-    justify-content: space-between;
-    align-items: center;
-
-    & .nav-link {
-        color: $orange;
-    }
+    max-width: 100%;
 
     & .nav-link:hover, .nav-link:focus {
-        color: $orangeHover;
+        color: $secondary;
     }
-
 }
 
 // SEARCH
 
 .input-group {
     justify-self: right;
-    max-width: 20rem;
-    max-height: 3rem;
-
-   & .btn.btn-primary {
-        background-color: $orange;
-        border: none;
-    }
-
-    & .btn.btn-primary:hover {
-        background-color: $orangeHover;
-    }
-
-    & input:focus {
-        border-color: none;
-        outline: none;
-        box-shadow: none;
-        border: none;
-    }
+    max-width: 100%;
+    max-height: 2rem;
 }
+
 
